version/0.17/_sources/api/solver/_autosummary/settings/tolerance_1.rst.txt
:orphan:

.. _tolerance_1:

tolerance
=========

.. autoclass:: ansys.fluent.core.solver.settings_232.tolerance_1.tolerance
    :show-inheritance:

.. rubric:: Arguments

==================================================================   =====================================================================================

Argument                                                                                                                                           Summary

==================================================================   =====================================================================================
:ref:`use_local_edge_length_factor <use_local_edge_length_factor>`       Enable tolerance based on local edge length factor instead of absolute tolerance.

:ref:`tolerance1 <tolerance1>`                                                                                                         'tolerance1' child.

:ref:`tolerance2 <tolerance2>`                                                                                                         'tolerance2' child.

:ref:`update <update>`                                                                                         Update mapped interface with new tolerance.

==================================================================   =====================================================================================

.. rubric:: Included in:

==========================================================   ============================================

Parent                                                                                            Summary

==========================================================   ============================================
:ref:`mapped_interface_options <mapped_interface_options>`       Enter the mapped-interface-options menu.

==========================================================   ============================================

