version/0.19/_sources/api/solver/_autosummary/settings/tolerance_1.rst.txt
:orphan:

.. _tolerance_1:

tolerance
=========

.. autoclass:: ansys.fluent.core.solver.settings_241.tolerance_1.tolerance
    :show-inheritance:

.. rubric:: Arguments

==================================================================   =====================================================================================

Argument                                                                                                                                           Summary

==================================================================   =====================================================================================
:ref:`use_local_edge_length_factor <use_local_edge_length_factor>`       Enable tolerance based on local edge length factor instead of absolute tolerance.

:ref:`gtol_length_factor <gtol_length_factor>`                                                                                 'gtol_length_factor' child.

:ref:`gtol_absolute_value <gtol_absolute_value>`                                                                              'gtol_absolute_value' child.

:ref:`update <update>`                                                                                         Update mapped interface with new tolerance.

==================================================================   =====================================================================================

.. rubric:: Included in:

==========================================================   ============================================

Parent                                                                                            Summary

==========================================================   ============================================
:ref:`mapped_interface_options <mapped_interface_options>`       Enter the mapped-interface-options menu.

==========================================================   ============================================

